--- a/views/registerUser.ejs
+++ b/views/registerUser.ejs
@@ -99,7 +99,7 @@
                                 <div class="row pt-1">
 
                                   <h6>Username</h6>
-                                  <input type="text" name="username" class="form-control ms-2" id="username" />
+                                  <input type="text" name="username" class="form-control ms-2" id="username"required />
 
                                 </div>
 
@@ -107,7 +107,7 @@
                                 <div class="row pt-1">
 
                                   <h6>Email</h6>
-                                  <input type="text" name="email" class="form-control ms-2" id="email" />
+                                  <input type="text" name="email" class="form-control ms-2" id="email"required />
 
                                 </div>
 
@@ -115,7 +115,7 @@
 
                                   <h6>Password</h6>
                                   <input type="password" name="password" id="password" class="form-control ms-2  "
-                                    placeholder="New Password" onkeyup='passConfirm();' />
+                                    placeholder="New Password" onkeyup='passConfirm();'required />
                                   <small id="message" style="color:red"> </small>
 
                                 </div>
@@ -125,7 +125,7 @@
 
                                   <input type="password" name="confirm_password" id="confirmpassword"
                                     class="form-control ms-2" value="" placeholder="Confirm Password"
-                                    onkeyup='passConfirm();' />
+                                    onkeyup='passConfirm();' required/>
                                   <small id="Message" style="color:red"> </small>
                                 </div>
 
