--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <style>
+  .card{
+    justify-content: center;
+  align-items: center;
+    margin: auto;
+  display: flex;
+  }
     .fixed-button {
         position: absolute;
         bottom: 20px;
@@ -21,12 +27,13 @@
         width: 20%;
     }
     .card-img-top {
-    width: 200px; 
-      height: 200px;
-      object-fit: cover;
-      display: block;
-      margin: 0 auto;
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
 }
+
 </style>
 <body>
   <%- include('navbar') %>
@@ -118,7 +125,7 @@
                                                 <b><%= jobindex.name_job %></b>
                                               </h5>
                                               <p class="card-text">
-                                                <%= jobindex.detail_work %>
+                                                <%= jobindex.detail_work.substring(0, 500)%>
                                               </p>
                                               <small class="card-text" style="color: #0800ff;">
                                                 <b>หมดเขต :<%= jobindex.deadline_offer %></b>
@@ -170,7 +177,7 @@
                                                                     <b><%= jobindex.name_job %></b>
                                                                   </h5>
                                                                   <p class="card-text">
-                                                                    <%= jobindex.detail_work %>
+                                                                    <%= jobindex.detail_work.substring(0, 500) %>
                                                                   </p>
                                                                   <small class="card-text" style="color: #0800ff;">
                                                                     <b>หมดเขต : <%= jobindex.deadline_offer %></b>
@@ -227,7 +234,7 @@
                                                                                           <b><%= jobindex.name_job %></b>
                                                                                         </h5>
                                                                                         <p class="card-text">
-                                                                                          <%= jobindex.detail_work %>
+                                                                                          <%= jobindex.detail_work.substring(0, 500) %>
                                                                                         </p>
                                                                                         <small class="card-text" style="color: #0800ff;">
                                                                                           <b>หมดเขต : <%= jobindex.deadline_offer %></b>
