--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
             <h2>Login</h2>
             <div class="inputbox">
               <ion-icon name="mail-outline"></ion-icon>
-              <input type="email" name="email" id="email"  autocomplete="off" required/>
+              <input type="text" name="email" id="email"  autocomplete="off" required/>
               <label for="email">Email</label>           
 
             </div>
@@ -86,6 +86,9 @@
             })
             .catch((error) => {
               console.error("An error occurred:", error);
+              
+errorMessage.style.display = "block";
+          errorMessage.textContent = "An error occurred. Please try again later.";
             });
         });
       });
