--- a/views/forget.ejs
+++ b/views/forget.ejs
@@ -11,6 +11,14 @@
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css">
+  <style> .label-profile{
+    width: 117px;
+    padding-top: 7px;
+  height: 35px;
+  flex-shrink: 0;
+  background: #f6d365;
+  text-align-last: center;
+  }</style>
 </head>
 
 <body>
@@ -33,7 +41,7 @@
                   <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Email</p>
                 </div>
                 <div class="col-sm-9">
-                  <input type="email" id="email" name="email" placeholder="Enter Email"/>
+                  <input type="email" id="email" name="email" placeholder="Enter Email" required/>
                 </div>
               </div>
               <hr>
