--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,7 @@
                           <b><%= jobindex.name_job %></b>
                         </h5>
                         <p class="card-text">
-                          <%= jobindex.detail_work %>
+                          <%= jobindex.detail_work.substring(0, 500) %>
                         </p>
                         <small class="card-text" style="color: #0800ff;">
                           <b>หมดเขต : <%= jobindex.deadline_offer %></b>
