--- a/views/resume.ejs
+++ b/views/resume.ejs
@@ -156,7 +156,7 @@
       <% } else { %>
         <section style="background-color: #eeeeee; ">
         <div class="container py-5 h-100">
-          <p class="label-profile">Resume</p>
+          <p class="label-profile"><b>Resume</b></p>
 
         </div>
 
