--- a/views/forgetchangepassword.ejs
+++ b/views/forgetchangepassword.ejs
@@ -11,6 +11,16 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+    .label-profile{
+      width: 117px;
+      padding-top: 7px;
+    height: 35px;
+    flex-shrink: 0;
+    background: #f6d365;
+    text-align-last: center;
+    }
+    </style>
 </head>
 
 <body>
@@ -35,7 +45,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">OTP</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="text" name="otp" id="otp"  placeholder="otp"/>
+                            <input type="text" name="otp" id="otp"  placeholder="otp" required/>
                         </div>
                       </div>
                       <hr>
@@ -44,7 +54,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Password</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="password" name="password" id="password"  placeholder="New Password"/>
+                            <input type="password" name="password" id="password"  placeholder="New Password"required/>
                         </div>
                       </div>
                       <hr>
@@ -53,7 +63,7 @@
                           <p class="mb-0" style="margin-left: 4vh; margin-top: 1vh;">Confirmpassword</p>
                         </div>
                         <div class="col-sm-4">
-                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"/>
+                            <input type="password" name="confirmpassword" id="confirmpassword"  placeholder="Confirm Password"required/>
                         </div>
                       </div>
                       <hr>
