--- a/views/jobsended.ejs
+++ b/views/jobsended.ejs
@@ -73,32 +73,41 @@
             border-color: #007BFF;
             /* Change border color when focused */
         }
+        .card-img-top {
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
+}
     </style>
 </head>
 
 <body>
 
     <%- include('navbar') %>
+    <div class="container">
+        <p class="label-profile mt-5"><b>Job sended</b></p>
+        <div class="row">
         <% if (history=='undefined' || history==null || resume==='undefined' || resume===null) { %>
-
+            <div style="justify-content: center;" class="d-flex">
+<h1 >No Jobsended</h1>
+</div>
             <%}else {%>
-                <div class="container">
-                    <p class="label-profile mt-5"><b>Job sended</b></p>
-                    <div class="row">
+               
                         <% if (history.length> 0) { %>
                             <% history.forEach((historyItem)=> { %> <!-- Added ( before historyItem -->
                             <div class="col-md-3">
-                                <div class="card d-flex" style="width: 18rem; margin-top: 50px ;">
-                                    <img src="/image/<%= historyItem.image %>" class="card-img-top mt-1 ms-auto me-auto
-                                    " alt="..."
-                                        style="height: 150px;width: 150px; object-fit: cover;">
+                                <div class="card " style="width: 18rem; margin-top: 50px ;">
+                                    <img src="/image/<%= historyItem.image %>" class="card-img-top " style="height: 200px;width: 200px;" alt="..." >
+
                                     <div class="card-body">
-                                        <h5 class="card-title">
-                                            <%= historyItem.name_company %>
-                                        </h5>
                                         <h4 class="card-title">
-                                            <%= historyItem.name_job %>
+                                            <%= historyItem.name_company %>
                                         </h4>
+                                        <h5 class="card-title">
+                                            <%= historyItem.name_job %>
+                                        </h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                                             content.</p>
                                     </div>
