--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -8,6 +8,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
+  <style>
+      .label-profile{
+  width: 117px;
+  padding-top: 7px;
+height: 35px;
+flex-shrink: 0;
+background: #49ebd8;
+text-align-last: center;
+}
+  </style>
 </head>
 
 <body>
@@ -16,7 +26,7 @@
     <% if(user) { %>
         <div style="background-color: rgb(219, 218, 218); height: 100vh;">
             <div class="container py-5 h-100" >
-              <p class="label-profile">Password</p>
+              <p class="label-profile"><b>Password</b></p>
 
 
 
@@ -82,7 +92,7 @@
 
         <div style="background-color: rgb(219, 218, 218); height: 100vh;">
             <div class="container py-5 h-100" >
-              <p class="label-profile">Password</p>
+              <p class="label-profile"><b>Password</b></p>
 
               <div class="row" style="justify-content:center ;">
             
@@ -149,7 +159,7 @@
 
         <div style="background-color: rgb(219, 218, 218); height: 100vh;">
             <div class="container py-5 h-100" >
-              <p class="label-profile">Password</p>
+              <p class="label-profile"><b>Password</b></p>
 
                 <div class="row" style="justify-content:center ;">
                   
