--- a/views/detailjob.ejs
+++ b/views/detailjob.ejs
@@ -94,7 +94,7 @@
                     <input type="hidden" id="idjob_company" name="idjob_company" value="<%= job.idjob_company %>" />
                   </div>
                   <button type="submit" class="btn btn-success fixed-button" style=" width: 100%;"
-                    data-mdb-ripple-color="dark"><b>SAVE</b></button>
+                    data-mdb-ripple-color="dark"><b>Apply Job</b></button>
                 </form>
                 <script>
                   document.querySelector('.fixed-button').addEventListener('click', function (event) {
@@ -132,7 +132,7 @@
                       <% } else if(company || admin) { %>
                       <% } else { %>
                           <button onclick="lessondelete()" type="button" class="btn btn-success fixed-button" style=" width: 100%;">
-                            <b>SAVE</b>
+                            <b>Apply Job</b>
                           </button>
                         <% }%>
               </div>
