--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,7 +80,7 @@
                           <b>หมดเขต : <%= jobindex.deadline_offer %></b>
                         </small><br>
                         <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>"
-                          class="btn fixed-button" style="background: #49ebd8;"><b>Detail Job</b></a>
+                          class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
                         <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">applyjob</a> -->
                       </div>
                     </div>
@@ -131,7 +131,7 @@
                                                 <b>หมดเขต :<%= jobindex.deadline_offer %></b>
                                               </small><br>
                                               <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>"
-                                                class="btn fixed-button" style="background: #49ebd8;"><b>Detail Job</b></a>
+                                                class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
                                               <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a> -->
                                             </div>
                                           </div>
@@ -183,7 +183,7 @@
                                                                     <b>หมดเขต : <%= jobindex.deadline_offer %></b>
                                                                   </small><br>
                                                                   <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>"
-                                                                    class="btn fixed-button"style="background: #49ebd8;"><b>Detail Job</b></a>
+                                                                    class="btn fixed-button"style="background: #49ebd8;"><b>Job Description</b></a>
                                                                   <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a> -->
                                                                 </div>
                                                               </div>
@@ -240,7 +240,7 @@
                                                                                           <b>หมดเขต : <%= jobindex.deadline_offer %></b>
                                                                                         </small><br>
                                                                                         <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>"
-                                                                                          class="btn fixed-button" style="background: #49ebd8;"><b>Detail Job</b></a>
+                                                                                          class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
                                                                                         <!-- <a href="/company/jobbyidjob/<%= jobindex.idjob_company %>" class="btn btn-primary ">apply</a> -->
 
                                                                                       </div>
