--- a/views/pdfemail.ejs
+++ b/views/pdfemail.ejs
@@ -73,8 +73,8 @@
           
      <thead>
       <tr>
-        <th scope="col">Contact</th>
-        <th scope="col">ABOUT ME</th>
+        <th scope="col">Skills</th>
+        <th scope="col">Experience</th>
       </tr>
     </thead>
           
