--- a/views/jobsended.ejs
+++ b/views/jobsended.ejs
@@ -104,12 +104,16 @@
                                     <div class="card-body">
                                         <h4 class="card-title">
                                             <%= historyItem.name_company %>
+                                           
+                                           
                                         </h4>
                                         <h5 class="card-title">
                                             <%= historyItem.name_job %>
                                         </h5>
                                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                                             content.</p>
+                                            <a href="/company/jobbyidjob/<%= historyItem.idjob_company %>"
+                                                class="btn fixed-button" style="background: #49ebd8;"><b>Job Description</b></a>
                                     </div>
                                 </div>
                             </div>
